# DJI-OSDK

./: .gitignore  CMakeLists.txt
nucleus/core/src/: hms_sample.cpp
nucleus/modules/: CMakeLists.txt
nucleus/modules/common/: UserConfig.txt
nucleus/modules/telemetry/: CMakeLists.txt  main.cpp
